--- a/resource_allocation_app/templates/resource_allocation_app/nurse_rostering_demo.html
+++ b/resource_allocation_app/templates/resource_allocation_app/nurse_rostering_demo.html
@@ -51,7 +51,7 @@
                     </select>
                 </div>
                 <div class="form-group col-md-12 col-lg-4 text-lg-right mt-3 mt-lg-0">
-                    <a href="{% url 'resource_allocation_app:nurse_rostering_demo' %}" class="btn btn-sm btn-warning">Default 설정</a>
+                    <a href="{% url 'resource_allocation_app:nurse_rostering_demo' %}" class="btn btn-sm btn-warning">Default</a>
                 </div>
             </div>
         </div>
