--- a/routing_logistics_app/templates/routing_logistics_app/cvrp_demo.html
+++ b/routing_logistics_app/templates/routing_logistics_app/cvrp_demo.html
@@ -71,7 +71,7 @@
                     </select>
                 </div>
                 <div class="form-group col-md-3 col-lg-6 text-lg-right mt-3 mt-lg-0">
-                    <a href="{% url 'routing_logistics_app:cvrp_demo' %}" class="btn btn-sm btn-warning">Default 설정</a>
+                    <a href="{% url 'routing_logistics_app:cvrp_demo' %}" class="btn btn-sm btn-warning">Default</a>
                 </div>
             </div>
         </div>
