--- a/routing_logistics_app/templates/routing_logistics_app/vrp_demo.html
+++ b/routing_logistics_app/templates/routing_logistics_app/vrp_demo.html
@@ -71,8 +71,8 @@
                         {% for i in num_vehicles_options %}<option value="{{ i }}" {% if i == submitted_num_vehicles %}selected{% endif %}>{{ i }}대</option>{% endfor %}
                     </select>
                 </div>
-                <div class="form-group col-md-3 col-lg-6 text-lg-right mt-3 mt-lg-0">
-                    <a href="{% url 'routing_logistics_app:vrp_demo' %}" class="btn btn-sm btn-warning">Default 설정</a>
+                <div class="form-group col-md-3 col-lg-8 text-lg-right mt-3 mt-lg-0">
+                    <a href="{% url 'routing_logistics_app:vrp_demo' %}" class="btn btn-sm btn-warning">Default</a>
                 </div>
             </div>
         </div>
