--- a/matching_assignment_app/templates/matching_assignment_app/resource_skill_matching_demo.html
+++ b/matching_assignment_app/templates/matching_assignment_app/resource_skill_matching_demo.html
@@ -61,7 +61,7 @@
 
     <form method="POST" id="skillMatchingForm">
         {% csrf_token %}
-        <input type="hidden" name="problem_type" value="resource skill" id="problem_type">
+        <input type="hidden" name="problem_type" value="resource_skill" id="problem_type">
         <input type="hidden" name="num_projects" value="{{ submitted_num_projects }}">
 
         <div class="card form-section">
